--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@astrojs/mdx": "^3.1.0",
     "@astrojs/starlight": "^0.24.2",
     "astro": "^4.10.2",
+    "astro-icon": "^1.1.0",
     "sharp": "^0.32.5",
     "typescript": "^5.4.5"
   }
