--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/check": "^0.7.0",
-    "@astrojs/mdx": "^3.1.0",
-    "@astrojs/starlight": "^0.24.2",
-    "astro": "^4.10.2",
+    "@astrojs/check": "^0.9.4",
+    "@astrojs/mdx": "^4.3.6",
+    "@astrojs/starlight": "^0.36.0",
+    "@fontsource-variable/comfortaa": "^5.2.8",
+    "@fontsource/comfortaa": "^5.2.8",
+    "astro": "^5.13.10",
     "astro-icon": "^1.1.0",
     "sharp": "^0.32.5",
+    "starlight-theme-next": "^0.3.2",
     "typescript": "^5.4.5"
   }
 }
